--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div> <b><주의 사항></b>
     <li>이 사이트의 입력기는 '첫가끝' 방식을 사용하였습니다. '첫가끝' 방식은 한글 2010 이후 버전에서 사용하는 한글 입력기입니다.  위의 옛한글 입력기에 오류가 발생한다면 한글 2010 이후 버전에서 작성하여 복사·붙여넣기를 시도해 보십시오.</li>
     <li>깜짝새 등의 프로그램에서 한양PUA로 입력된 텍스트를 복사·붙여넣기 한다면 오류가 발생할 수 있습니다.</li>
-  <li> '몃 <u>間ㄷ 집</u>처럼 단독으로 온 관형격 조사(ㄱ, ㄷ, ㅂ, ㅅ, ㅈ, ㆆ, ㅸ) 역시 위 입력기에서 입력하면 관형격 조사가 초성으로 인식되어 오류가 발생합니다. 역시 한글 2010 이후 버전에서 복사·붙여넣기로 하십시오. </li></div>
+  <li> '몃 <u>間ㄷ 집</u>'처럼 단독으로 온 관형격 조사(ㄱ, ㄷ, ㅂ, ㅅ, ㅈ, ㆆ, ㅸ) 역시 위 입력기에서 입력하면 관형격 조사가 초성으로 인식되어 오류가 발생합니다. 역시 한글 2010 이후 버전에서 복사·붙여넣기로 하십시오. </li></div>
   <li>옛이응과 이응이 입력기에서 생김새가 잘 구별되지 않습니다. 주의하여 입력해 주시기 바랍니다.</li>  
   <br><b><옛한글 입력 방법></b><br>ㅿ: ㅁ + Shift (혹은 ㅁ.)
   <br>ㆁ(옛이응): Shift + ㅇ
