--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <li>깜짝새 등의 프로그램에서 한양PUA로 입력된 텍스트를 복사·붙여넣기 한다면 오류가 발생할 수 있습니다.</li>
   <li> '몃 <u>間ㄷ 집</u>'처럼 단독으로 온 관형격 조사(ㄱ, ㄷ, ㅂ, ㅅ, ㅈ, ㆆ, ㅸ) 역시 위 입력기에서 입력하면 관형격 조사가 초성으로 인식되어 오류가 발생합니다. 역시 한글 2010 이후 버전에서 복사·붙여넣기로 하십시오. </li></div>
   <li>옛이응과 이응이 입력기에서 생김새가 잘 구별되지 않습니다. 주의하여 입력해 주시기 바랍니다.</li>  
-  <br><b><옛한글 입력 방법></b><br>ㅿ: ㅁ + Shift (혹은 ㅁ.)
+  <br><b><옛한글 입력 방법></b>
   <br>ㆁ(옛이응): Shift + ㅇ
   <br>ㆆ: Shift + ㅎ
   <br>ㅿ: Shift + ㅅ
