--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <br><b><옛한글 입력 방법></b>
   <br>ㆁ(옛이응): Shift + ㅇ
   <br>ㆆ: Shift + ㅎ
-  <br>ㅿ: Shift + ㅅ
+  <br>ㅿ: Shift + ㅁ
   <br>ㅱ: ㅁ + ㅇ
   <br>ㅸ: ㅂ + ㅇ
   <br>ㆍ: ㅏ+ㅏ
