--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <h1>15세기 국어 발음 변환기</h1>
 
 <p>문헌어 입력</p>
+<br>⦁ 입력기에서 오류가 자주 발생합니다. 한글 2010 이후 버전에서 복사·붙여넣기로 사용하는 것이 더 간편합니다..
 
   <textarea id='inputArea'> </textarea>
   <button onclick="pronounce()">발음 변환</button>
   <div id='result'></div>
   <div> <b><주의 사항></b>
-    <br>⦁ 인터넷익스플로러에서 작동합니다. 엣지, 크롬, 파이어폭스에서는 오류가 발생할 수 있습니다.
-    <br>⦁ 15세기 문헌어를 입력하면 IPA 기호로 변환합니다. 15세기 문헌어는 '어듸메(https://akorn.bab2min.pe.kr/)' 사이트를 이용할 수 있습니다. 
-    <br>⦁ 이 사이트의 입력기는 '첫가끝' 방식을 사용하였습니다. '첫가끝' 방식은 한글 2010 이후 버전에서 사용하는 한글 입력기입니다. 인터넷익스플로러에서도 오류가 발생한다면 한글 2010 이후 버전에서 작성하여 복사·붙여넣기를 시도해 보십시오.
+    <br>⦁ 이 사이트의 입력기는 '첫가끝' 방식을 사용하였습니다. '첫가끝' 방식은 한글 2010 이후 버전에서 사용하는 한글 입력기입니다.
     <br>⦁ 깜짝새 등의 프로그램에서 한양PUA로 입력된 텍스트를 복사·붙여넣기 한다면 오류가 발생할 수 있습니다.
+    <br>⦁ 15세기 문헌어를 입력하면 IPA 기호로 변환합니다. 15세기 문헌어는 '어듸메(https://akorn.bab2min.pe.kr/)' 사이트를 이용할 수 있습니다. 
   <br>⦁'몃 <u>間ㄷ 집</u>'처럼 단독으로 온 관형격 조사(ㄱ, ㄷ, ㅂ, ㅅ, ㅈ, ㆆ, ㅸ) 역시 위 입력기에서 입력하면 관형격 조사가 초성으로 인식되어 오류가 발생합니다. 역시 한글 2010 이후 버전에서 복사·붙여넣기로 하십시오. </div>
   <br>⦁옛이응과 이응이 입력기에서 생김새가 잘 구별되지 않습니다. 주의하여 입력해 주시기 바랍니다.
   <br><b><옛한글 입력 방법></b>
