--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <h1>15세기 국어 발음 변환기</h1>
 
 <p>문헌어 입력</p>
-<br>⦁ 입력기에서 오류가 자주 발생합니다. 한글 2010 이후 버전에서 복사·붙여넣기로 사용하는 것이 더 간편합니다..
-
+  <br><p><font size="2">입력기에서 오류가 자주 발생합니다. 한글 2010 이후 버전에서 복사·붙여넣기로 사용하는 것이 더 간편합니다..</font></p>
+  <br>
   <textarea id='inputArea'> </textarea>
   <button onclick="pronounce()">발음 변환</button>
   <div id='result'></div>
